labs/scenario/load-balancers/alb-hostname-routing/k8s-deployment-apache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 4
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: frontend
          image: httpd
          ports:
            - containerPort: 80
