labs/scenario/load-balancers/alb-hostname-routing/k8s-service-apache.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: load-balancers
spec:
  selector:
    app: apache
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
