labs/scenario/load-balancers/alb-hostname-routing/k8s-service-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: load-balancers
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
