labs/scenario/load-balancers/alb-hostname-routing/k8s-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
  namespace: load-balancers
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.nginx-service: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"nginx-service","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.nginx-service: >
      [{"field":"host-header","hostHeaderConfig":{"values":["nginx.com"]}}]
    alb.ingress.kubernetes.io/actions.apache-service: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"apache-service","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.apache-service: >
      [{"field":"host-header","hostHeaderConfig":{"values":["apache.com"]}}]
    # alb.ingress.kubernetes.io/actions.rule-path1: >
    #   {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"200","messageBody":"Host
    #   is www.example.com OR anno.example.com"}}
    # alb.ingress.kubernetes.io/conditions.rule-path1: >
    #   [{"field":"host-header","hostHeaderConfig":{"values":["anno.example.com"]}}]
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  name: use-annotation
